--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 101.99.76.22;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -142,7 +143,6 @@ allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.53.58.161;
-allow 157.180.125.79;
 allow 158.174.210.51;
 allow 160.119.249.240;
 allow 161.129.68.162;
@@ -261,7 +261,6 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
 allow 185.132.53.6;
-allow 185.146.232.234;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -1191,7 +1190,6 @@ allow 2a00:c70:1:185:246:84:179:1;
 allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
 allow 2a01:4f9:2b:75d::124:148;
-allow 2a01:4f9:c013:bcac::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1504,6 +1502,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:97c0:3e3:b6::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1896,6 +1895,7 @@ allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
 allow 83.217.9.73;
+allow 83.228.94.69;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
@@ -2000,6 +2000,7 @@ allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.158.156;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
