--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1,3 +1,4 @@
+deny 101.99.76.22;
 deny 102.130.113.9;
 deny 102.130.117.167;
 deny 102.130.127.117;
@@ -142,7 +143,6 @@ deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.53.58.161;
-deny 157.180.125.79;
 deny 158.174.210.51;
 deny 160.119.249.240;
 deny 161.129.68.162;
@@ -261,7 +261,6 @@ deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.130.47.58;
 deny 185.132.53.6;
-deny 185.146.232.234;
 deny 185.150.28.13;
 deny 185.154.110.142;
 deny 185.154.110.17;
@@ -1191,7 +1190,6 @@ deny 2a00:c70:1:185:246:84:179:1;
 deny 2a00:fbe4:1ab:ffff::133;
 deny 2a01:270:9847::1;
 deny 2a01:4f9:2b:75d::124:148;
-deny 2a01:4f9:c013:bcac::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1504,6 +1502,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:44;
 deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:97c0:3e3:b6::1;
+deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -1896,6 +1895,7 @@ deny 82.221.131.5;
 deny 82.221.131.86;
 deny 82.221.139.190;
 deny 83.217.9.73;
+deny 83.228.94.69;
 deny 83.96.213.63;
 deny 83.97.20.77;
 deny 84.16.224.227;
@@ -2000,6 +2000,7 @@ deny 93.123.109.116;
 deny 93.123.12.112;
 deny 93.185.158.156;
 deny 93.185.165.211;
+deny 93.90.74.28;
 deny 93.90.74.29;
 deny 93.95.227.37;
 deny 93.95.228.125;
