--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -101,7 +101,6 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 119.28.139.55;
@@ -755,7 +754,6 @@ allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1254,6 +1252,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1816,6 +1815,7 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1885,6 +1885,8 @@ allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
 allow 80.85.246.128;
+allow 80.94.92.106;
+allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.168.83.98;
 allow 81.17.28.95;
@@ -2026,5 +2028,6 @@ allow 94.74.164.94;
 allow 95.128.43.164;
 allow 95.143.193.125;
 allow 95.211.174.137;
+allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
